google app script 와 연결 - jsonp 로 oricon 차트 데이터 받음

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<script src="./app/bundle.js"></script>
 </head>
 <body>
-  Hello, World.
+  Hello, Oricon Chart.
+  <div id="rankList"></div>
 </body>
 </html>
