Get data by date

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script src="./app/bundle.js"></script>
 </head>
 <body>
-  Hello, Oricon Chart.
+  Hello, Oricon Chart. ( Single Daily )
   <div id="rankList"></div>
 </body>
 </html>
